只替换html文件中css,js文件 url出错时不停止任务，给错误提示

--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="css/index.c2fb49029.js">
+    <link rel="stylesheet" href="css/index.js">
+    <link href="images/index.png">
 </head>
 <body>
-    <script src="../js/index.c0d5103d.js"></script>
-    <script src="/js/index.c0d5103d.js"></script>
+    <script src="../js/index.js"></script>
+    <script src="/js/index.js"></script>
 </body>
 </html>
